syntax = "proto3";

package request;

message C2SRegisterRequest {
  string id = 1;
  string password = 2;
  string email = 3;
}

message C2SLoginRequest {
  string id = 1;
  string password = 2;
}

message C2SMatchRequest {
}

message C2STowerPurchaseRequest {
  float x = 1;
  float y = 2;
}

message C2SSpawnMonsterRequest {
}

message C2STowerAttackRequest {
  int32 towerId = 1;
  int32 monsterId = 2;
}

message C2SMonsterAttackBaseRequest {
  int32 damage = 1;
}

message C2SGameEndRequest {
}